# aggie-unterprise

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build_standalone_executable.txt  github release notes.txt  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: build-executables.yml
aggie_unterprise/: __init__.py  aggie_report.py  aggie_unterprise.py
docs/: index.md  requirements.txt
scripts/: aggie_report.py
