[project]
name = "aggie-unterprise"
version = "0.1.6"
description = "A Python package for extracting and processing grant data from AggieEnterprise spreadsheets."
authors = [
    { name="Dave Doty", email="doty@ucdavis.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

urls = { "Homepage" = "https://github.com/dave-doty/aggie-unterprise" }

dependencies = [
    "openpyxl>=3.0.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aggie_unterprise"]

[project.scripts]
aggie-report = "scripts.aggie_report:main"