[project]
name = "aggie-unterprise"
version = "1.0.4"
description = "A Python package for extracting and processing grant data from AggieEnterprise spreadsheets."
authors = [
    { name="Dave Doty", email="doty@ucdavis.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.0.0",
    "tabulate>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/dave-doty/aggie-unterprise"
Issues = "https://github.com/dave-doty/aggie-unterprise/issues"
API = "https://aggie-unterprise.readthedocs.io/"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aggie_unterprise"]

[project.scripts]
aggie-report = "aggie_unterprise.aggie_report:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=9.1.0",
]

